Fix T53544: Undo in pose mode selects all fcurves